css/projects.css
@font-face {
  font-family: 'MesloLGS Nerd Font';
  src: url('../docs/fonts/MesloLGSNerdFontMono-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

#projects {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15vh 0; 
  z-index: 2;
  position: relative;
}

.projects-container {
  display: flex;
  flex-direction: column;
  width: 60vw;;
  height: 70vh; 
  border-radius: 0.5rem;
  overflow: hidden;
  font-family: 'MesloLGS Nerd Font', monospace;
  font-size: 0.9rem;
  position: absolute; /* allow movement */
  left: 50%;
  top: 50%;
}

.projects-content {
  display: flex;
  flex-direction: row; 
  height: 100%;
  width: 100%;
}

.window-controls {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.6rem 1rem;
  background: rgba(36, 40, 59, 0.8);
  border-bottom: 0.1rem solid #414868;
  position: relative;
}

.window-left {
  display: flex;
  gap: 0.6rem;
}

.window-btn {
  width: 0.8rem;
  height: 0.8rem;
  border-radius: 50%;
}

.window-btn.red { background: #ff5f56; }    
.window-btn.yellow { background: #ffbd2e; } 
.window-btn.green { background: #27c93f; }  

.window-name {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  align-items: center;
  text-align: center;
  user-select: none; 
  cursor: default;
  color: #c0caf5;
  font-size: 0.85rem;
}

.window-name i {
  margin-right: 0.5rem;
  color: #7aa2f7;
}

.file-explorer {
  background: rgba(36, 40, 59, 0.8);
  padding: 0.8rem;
  height: 100%; 
  overflow-y: auto; 
  border-right: 0.1rem solid #414868; 
  user-select: none;  
}

.folder-static {
  padding: 0.5rem 0.6rem;
  color: #c0caf5;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  cursor: pointer; 
}

.folder-static i:first-child {
  transition: transform 0.3s ease;
}

.project-list {
  list-style: none;
  padding-left: 20px;
  overflow: hidden;
  max-height: 300px; /* TODO fix height */
  transition: max-height 0.3s ease-out, opacity 0.3s ease-out, transform 0.3s ease-out;
  opacity: 1;
}

.project-list.collapsed {
  max-height: 0; 
  opacity: 0;
  transform: translateY(-10px);
}

.project-list li.active {
  background: rgba(41, 46, 66, 0.8);
  color: #7aa2f7;
}

.explorer-title {
  color: #7aa2f7;
  margin-bottom: 0.5rem;
  font-size: 0.8rem;
}

.project-list li.active {
  background: rgba(41, 46, 66, 0.8);
  color: #7aa2f7; 
  border-left: 0.2rem solid #7aa2f7; 
}

.project-list li {
  padding: 0.5rem 0.6rem;
  cursor: pointer;
  color: #c0caf5;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  transition: background 0.3s ease, border-left 0.3s ease;
}

.project-list li:hover {
  background: rgba(65, 72, 104, 0.8);
  color: #7aa2f7;
}

.editor {
  flex: 1;
  background: rgba(44, 50, 77, 0.8); 
  display: flex;
  height: 100%; 
  flex-direction: column;
}

.editor-content {
  padding: 20px;
  width: 100%;
  height: 100%;
  position: relative;
  overflow-y: auto; 
  max-height: 100%; 
}

.editor-content::-webkit-scrollbar {
  width: 8px; 
}

.editor-content::-webkit-scrollbar-track {
  background: transparent; 
}

.editor-content::-webkit-scrollbar-thumb {
  background-color: rgba(122, 162, 247, 0.2); /
}

.editor-content::-webkit-scrollbar-thumb:hover {
  background-color: rgba(122, 162, 247, 0.4); 
}

.project-preview {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 20px; 
  box-sizing: border-box;
}

.project-preview .blog {
  font-size: 0.9rem;
}

.project-preview h2 {
  font-size: 2rem;
  color: #9ece6a; 
  margin: 0.2rem 0 0.8rem 0; 
}

.project-preview p {
  color: #c0caf5;
  line-height: 1.6; 
  margin-bottom: 0.5rem; 
  font-size: 0.9rem;
}

.project-preview ul {
  color: #c0caf5;
  line-height: 1.6; 
  margin-bottom: 0.5rem;
  font-size: 0.9rem;
  list-style-position: outside;
  padding-left: 0.8rem;
}

.project-preview .cite {
  color: #7aa2f7;
  text-decoration: none;
}

.project-preview .links {
  color: #bb9af7; 
  text-decoration: none;
  font-weight: 500;
  display: inline-block;
  padding: 0.3rem 0.5rem; 
  border-radius: 0.3rem;
  transition: background 0.3s ease, color 0.3s ease;
}

.project-preview .links:hover {
  background: rgba(187, 154, 247, 0.2); 
  text-decoration: underline;
}

.hidden {
  display: none !important;
}


.status-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.4rem 0.8rem;
  background: rgba(36, 40, 59, 0.8);
  color: #c0caf5;
  font-size: 0.85rem;
  border-top: 0.1rem solid #414868;
  font-family: 'MesloLGS Nerd Font', monospace;
}

.left-status {
  display: flex;
  align-items: center;
  gap: 0.8rem;
}

.mode {color: #9ece6a;}
.git-branch {color: #e0af68;}
.file-path {color: #7aa2f7; }
.right-status {
  display: flex;
  align-items: center;
  gap: 0.8rem;
}
.cursor-pos {color: #f7768e;}
.clock {color: #bb9af7;}


/* two-step responsive */
@media screen and (max-width: 1000px) {
  .cursor-pos {display: none !important;}
  .apple {display: none !important;}
  .mode {display: none !important;}
  .git-branch {display: none !important;}
}

@media screen and (max-width: 768px) {
  .projects-container {
    position: static !important;
    transform: none !important;
    left: auto !important;
    top: auto !important;
    width: 80vw;;
  }
  .file-explorer {
    display: none !important;
  }
}

